# depth-eye-sdk-ubuntu

./: CMakeLists.txt  README
include/voxel-0.6.7/: DepthCamera.h
lib/: libti3dtof.so.0.6.7  libvoxel.so.0.6.7
lib/voxel/: libhaloh1cdk.so.0.6.7  libhaloh1cdk.so.34
share/voxel-0.6.7/conf/: HaloH1CDKCamera.conf
src/Sample1/: CMakeLists.txt  DepthEyeH1Sample.cpp  DepthEyeH1Sample.h
